--- a/index.html
+++ b/index.html
@@ -1,7 +1,25 @@
 <!doctype html>
 <html>
-  <head><meta charset="utf-8"><title>CMC Supply API</title></head>
+  <head>
+    <meta charset="utf-8">
+    <title>DeLorean Labs Supply API</title>
+  </head>
   <body>
-    <p>Circulating supply JSON: <a href="/circulating.json">/circulating.json</a></p>
+    <h2>DeLorean Labs Official Supply API</h2>
+
+    <p>
+      Circulating Supply:
+      <a href="/circulating.json">
+        https://api.deloreanlabs.com/circulating.json
+      </a>
+    </p>
+
+    <p>
+      Total Supply:
+      <a href="/totalsupply.json">
+        https://api.deloreanlabs.com/totalsupply.json
+      </a>
+    </p>
+
   </body>
 </html>
